[package]
authors = ["HansiHE <hansihe@hansihe.com>"]
build = "build.rs"
name = "realradio"
version = "0.1.0"

[dependencies]
alsa = "0.1.10"
bytes = "0.4.5"
error-chain = "0.11.0"
futures = "0.1.15"
num = "0.1.40"
serde = "1.0.14"
serde_derive = "1.0.14"
serial = "0.4.0"
tokio = "0.0.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-serial = "0.5.0"
toml = "0.4.5"
